--- a/hw1/css/styles.css
+++ b/hw1/css/styles.css
@@ -22,6 +22,13 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
+img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .container-fullwidth {
   background-color: blue;
 }
