Rescaled gallery images to 1328 x 747

--- a/hw1/css/styles.css
+++ b/hw1/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fc7676;
+  background-color: #3884ff;
 }
 
 nav li {
@@ -30,7 +30,7 @@ img {
 }
 
 .container-fullwidth {
-  background-color: blue;
+  background-color: #fffa00;
 }
 
 .content {
