Created mile converter page

--- a/hw4/webapp/webapp/Views/Home/MileConverter.cshtml
+++ b/hw4/webapp/webapp/Views/Home/MileConverter.cshtml
@@ -3,5 +3,31 @@
     ViewBag.Title = "MileConverter";
 }
 
-<h2>MileConverter</h2>
+<h2>Convert Miles to Metric</h2>
+<div class="row">
+    <div class="col-sm-4">
+        <p>
+            <label for="mileinput">Miles</label>
+            <br />
+            <input type="number" name="mileinput" />
+        </p>
+    </div>
+    <div class="col-sm-6">
+        <h4>Select a unit</h4>
+        <p>
+            <input type="radio" name="unitselect" value="millimeters" />
+            <label for="unitselect">Millimeters</label>
+            <br />
+            <input type="radio" name="unitselect" value="centimeters" />
+            <label for="unitselect">Centimeters</label>
+            <br />
+            <input type="radio" name="unitselect" value="meters" />
+            <label for="unitselect">Meters</label>
+            <br />
+            <input type="radio" name="unitselect" value="kilometers" />
+            <label for="unitselect">Kilometers</label>
+        </p>
 
+        <p><a class="btn btn-default" href="#">Convert</a></p>
+    </div>
+</div>
