--- a/hw4/webapp/webapp/Views/Home/Index.cshtml
+++ b/hw4/webapp/webapp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         A few forms and some simple server-side logic -- learning the basics of GET, POST, query strings, form data and
         handling it all from an ASP.NET MVC 5 application.
     </p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="http://www.wou.edu/~morses/classes/cs46x/assignments/HW4_1819.html" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
@@ -18,7 +18,7 @@
             Want to know how many millimeters there are in 26.3 miles? This calulator is for you. Uses query strings
             to send form data to the server, which performs the calculation and returns the answer in the requested page.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Try it out &raquo;</a></p>
+        <p><a class="btn btn-primary" href="/MileConverter">Try it out &raquo;</a></p>
     </div>
     <div class="col-md-6">
         <h2>Color Chooser</h2>
@@ -26,6 +26,6 @@
             Typical online color choosers are way too useful. We wanted something fun and completely useless.
             This form POST's the data to the server.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Check it out &raquo;</a></p>
+        <p><a class="btn btn-primary" href="#">Check it out &raquo;</a></p>
     </div>
 </div>
