--- a/hw4/webapp/webapp/Views/Home/Index.cshtml
+++ b/hw4/webapp/webapp/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             Want to know how many millimeters there are in 26.3 miles? This calulator is for you. Uses query strings
             to send form data to the server, which performs the calculation and returns the answer in the requested page.
         </p>
-        <p><a class="btn btn-primary" href="/MileConverter">Try it out &raquo;</a></p>
+        <p><a class="btn btn-primary" href="MileConverter">Try it out &raquo;</a></p>
     </div>
     <div class="col-md-6">
         <h2>Color Chooser</h2>
