Created color controller and web page

--- a/hw4/webapp/webapp/Views/Shared/_Layout.cshtml
+++ b/hw4/webapp/webapp/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Converter", "MileConverter", "Home")</li>
+                    <li>@Html.ActionLink("ColorChooser", "Create", "Color")</li>
                 </ul>
             </div>
         </div>
