--- a/hw4/webapp/webapp/Views/Home/Index.cshtml
+++ b/hw4/webapp/webapp/Views/Home/Index.cshtml
@@ -26,6 +26,6 @@
             Typical online color choosers are way too useful. We wanted something fun and completely useless.
             This form POST's the data to the server.
         </p>
-        <p><a class="btn btn-primary" href="#">Check it out &raquo;</a></p>
+        <p><a class="btn btn-primary" href="/Color/Create">Check it out &raquo;</a></p>
     </div>
 </div>
