Made few changes and added comments to code where needed

--- a/hw4/webapp/webapp/Views/Home/MileConverter.cshtml
+++ b/hw4/webapp/webapp/Views/Home/MileConverter.cshtml
@@ -7,6 +7,7 @@
 <form action="/Home/MileConverter" method="get">
     <div class="row">
         <div class="col-sm-4">
+            <!-- Input text box-->
             <p>
                 <label for="mileinput">Miles</label>
                 <br />
@@ -14,6 +15,7 @@
             </p>
         </div>
         <div class="col-sm-6">
+            <!-- Unit of measure radio buttons-->
             <h4>Select a unit</h4>
             <p>
                 <input type="radio" name="unitselect" value="millimeters" checked="checked" />
@@ -29,6 +31,7 @@
                 <label for="unitselect">Kilometers</label>
             </p>
 
+            <!-- "Convert button"-->
             <input type="submit" class="btn btn-primary" name="btn" value="Convert" />
         </div>
     </div>
