--- a/hw4/webapp/webapp/Views/Home/MileConverter.cshtml
+++ b/hw4/webapp/webapp/Views/Home/MileConverter.cshtml
@@ -11,7 +11,7 @@
             <p>
                 <label for="mileinput">Miles</label>
                 <br />
-                <input type="number" name="mileinput" min="0" />
+                <input type="number" name="mileinput" min="0" step="0.000000000000001"/>
             </p>
         </div>
         <div class="col-sm-6">
