--- a/hw5/Apartment/Apartment/Views/Home/Index.cshtml
+++ b/hw5/Apartment/Apartment/Views/Home/Index.cshtml
@@ -3,29 +3,22 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Campus Apartments</h1>
+    <p class="lead">We offer affordable housing solutions to current Western Oregon University students.</p>
+    <p><a href="http://www.wou.edu/~morses/classes/cs46x/assignments/HW5_1819.html" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-6">
+        <h2>Tenant Request Form</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Have a request, need maintainance or need to file a complaint? Tell us about it and we'll get back to you as soon as we can.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary" href="Home/RequestForm">Fill it out &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+        <h2>View Current Requests</h2>
+        <p>Having trouble remembering if you sent a request or just want to look around? Check out all our open requests.</p>
+        <p><a class="btn btn-primary" href="Home/ViewForms">View requests &raquo;</a></p>
     </div>
 </div>
