--- a/hw5/Apartment/Apartment/Views/Home/Delete.cshtml
+++ b/hw5/Apartment/Apartment/Views/Home/Delete.cshtml
@@ -1,15 +1,14 @@
 ﻿@model Apartment.Models.Tenant
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Request";
 }
 
-<h2>Delete</h2>
+<h2 class="text-center">Delete Request</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Tenant</h4>
-    <hr />
+    <br />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -82,7 +81,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "ViewForms")
         </div>
     }
 </div>
