--- a/hw5/Apartment/Apartment/Views/Home/Delete.cshtml
+++ b/hw5/Apartment/Apartment/Views/Home/Delete.cshtml
@@ -6,9 +6,11 @@
 
 <h2 class="text-center">Delete Request</h2>
 
+@*Delete request confirmation page*@
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <br />
+    @*Displays information of request to be deleted*@
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
