--- a/hw6/WWImporters/WWImporters/Views/Home/Index.cshtml
+++ b/hw6/WWImporters/WWImporters/Views/Home/Index.cshtml
@@ -1,24 +1,32 @@
 ﻿@model IEnumerable<WWImporters.Models.Person>
 
 @{
-    ViewBag.Title = "Index";
+                /**/
+
+                ViewBag.Title = "Index";
 }
 
 <h2>People Search</h2>
 
 <form action="/Home/Index" method="get">
     <div class="row">
-        <div class="col-sm-10">
-            <input name="query" />
-        </div>
-        <div class="col-sm-2">
-            <input type="submit" class="btn btn-primary" value="Search" />
+        <div class="col-sm-12">
+            <input name="query" id="search" placeholder="Search by client name" />
+            <input type="submit" class="btn-lg btn-info" id="submit" value="Search" />
         </div>
     </div>
 </form>
 
-@foreach(var p in Model)
+<br />
+<br />
+
+@if (ViewBag.ShowError)
 {
-    @Html.DisplayFor(personItem => p.FullName)
-    <br />
+    <h5 style="color: #8B0000">No results found.</h5>
+}
+
+
+@foreach (var person in Model)
+{
+    <a class="btn btn-default btn-lg btn-block" href="@Url.Action("Details", "Home", new { id=person.PersonID })">@Html.DisplayFor(personItem => person.FullName)</a>
 }
