--- a/hw6/WWImporters/WWImporters/Views/Home/Details.cshtml
+++ b/hw6/WWImporters/WWImporters/Views/Home/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WWImporters.Models.Person
+﻿@model WWImporters.Models.ViewModel.DashboardVM
 
 @{
     ViewBag.Title = "Details";
@@ -6,48 +6,52 @@
 
 <br />
 <br />
+
+@*Displays Person information*@
 <div class="container">
     <div class="row">
         <div class="col-sm-8 details-box">
-            <h2>@Html.DisplayFor(model => model.FullName)</h2>
+            <h2>@Html.DisplayFor(model => model.Person.FullName)</h2>
             <hr style="border-color: black;" />
             <dl class="dl-horizontal">
                 <dt>
                     Preferred name:
                 </dt>
                 <dd>
-                    @Html.DisplayFor(model => model.PreferredName)
+                    @Html.DisplayFor(model => model.Person.PreferredName)
                 </dd>
 
                 <dt>
                     Phone:
                 </dt>
                 <dd>
-                    @Html.DisplayFor(model => model.PhoneNumber)
+                    @Html.DisplayFor(model => model.Person.PhoneNumber)
                 </dd>
 
                 <dt>
                     Fax:
                 </dt>
                 <dd>
-                    @Html.DisplayFor(model => model.FaxNumber)
+                    @Html.DisplayFor(model => model.Person.FaxNumber)
                 </dd>
 
                 <dt>
                     E-mail:
                 </dt>
                 <dd>
-                    <a href="mailto:@Html.DisplayFor(model => model.EmailAddress)">@Html.DisplayFor(model => model.EmailAddress)</a>
+                    <a href="mailto:@Html.DisplayFor(model => model.Person.EmailAddress)">@Html.DisplayFor(model => model.Person.EmailAddress)</a>
                 </dd>
 
                 <dt>
                     Member since:
                 </dt>
                 <dd>
-                    @Html.DisplayFor(model => model.ValidFrom)
+                    @Html.DisplayFor(model => model.Person.ValidFrom)
                 </dd>
             </dl>
         </div>
+
+        @*Profile photo placeholder*@
         <div class="col-sm-4">
             <img src="https://via.placeholder.com/225?text=Photo" alt="Profile photo" class="center-block"/>
         </div>
