--- a/hw6/WWImporters/WWImporters/Views/Home/Index.cshtml
+++ b/hw6/WWImporters/WWImporters/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
 
 <h2 style="text-align: center;">Client Search</h2>
 
+@*Search box and button*@
 <form action="/Home/Index" method="get">
     <div class="row">
         <div class="col-sm-12">
@@ -21,6 +22,7 @@
 <br />
 <br />
 
+@*Displays an error if no matches are found in controller*@
 @if (ViewBag.ShowError)
 {
     <h5 style="color: #8B0000">No results found.</h5>
@@ -31,6 +33,7 @@ else
 }
 
 
+@*Displays search results binded with hyperlink*@
 @foreach (var person in Model)
 {
     <a class="btn btn-default btn-lg btn-block" href="@Url.Action("Details", "Home", new { id=person.PersonID })">@Html.DisplayFor(personItem => person.FullName)</a>
