--- a/hw6/WWImporters/WWImporters/Views/Home/Details.cshtml
+++ b/hw6/WWImporters/WWImporters/Views/Home/Details.cshtml
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-6 details-box">
-            <h2>@Html.DisplayFor(model => model.Person.FullName)</h2>
+            <h1>@Html.DisplayFor(model => model.Person.FullName)</h1>
             <hr style="border-color: black;" />
             <dl class="dl-horizontal">
                 <dt>
@@ -59,6 +59,9 @@
 
     <br />
 
+@*If person is primary contact, then show company profile, purchase history and items ordered*@
+ @if (ViewBag.PrimaryContact)
+ {
     <div class="row">
         <div class="col-sm-6 details-box">
             <h2>Company Profile</h2>
@@ -101,4 +104,36 @@
             </dl>
         </div>
     </div>
+
+    <br />
+
+    <div class="row">
+        <div class="col-sm-6 details-box">
+            <h2>Purchase History Summary</h2>
+            <hr style="border-color: black;" />
+            <dl class="dl-horizontal">
+                <dt>
+                    Orders:
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Customer.Orders.Count)
+                </dd>
+
+                <dt>
+                    Gross sales:
+                </dt>
+                <dd>
+                    @String.Format("{0:C}", ViewBag.GrossSales)
+                </dd>
+
+                <dt>
+                    Gross profit:
+                </dt>
+                <dd>
+                    @String.Format("{0:C}", ViewBag.GrossProfit)
+                </dd>
+            </dl>
+        </div>
+    </div>
+ }
 </div>
