Added ordering logic for items purchased and created table

--- a/hw6/WWImporters/WWImporters/Content/Site.css
+++ b/hw6/WWImporters/WWImporters/Content/Site.css
@@ -3,6 +3,21 @@
     padding-bottom: 20px;
 }
 
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    text-align: left;
+    padding: 10px;
+}
+
+tr:nth-child(odd) {
+    background-color: #fff;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
