--- a/hw6/WWImporters/WWImporters/Views/Home/Details.cshtml
+++ b/hw6/WWImporters/WWImporters/Views/Home/Details.cshtml
@@ -12,42 +12,22 @@
     <div class="row">
         <div class="col-sm-6 details-box">
             <h1>@Html.DisplayFor(model => model.Person.FullName)</h1>
-            <hr style="border-color: black;" />
+            <hr style="border-color: black;"/>
             <dl class="dl-horizontal">
-                <dt>
-                    Preferred name:
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Person.PreferredName)
-                </dd>
+                <dt>Preferred name:</dt>
+                <dd>@Html.DisplayFor(model => model.Person.PreferredName)</dd>
 
-                <dt>
-                    Phone:
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Person.PhoneNumber)
-                </dd>
+                <dt>Phone:</dt>
+                <dd>@Html.DisplayFor(model => model.Person.PhoneNumber)</dd>
 
-                <dt>
-                    Fax:
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Person.FaxNumber)
-                </dd>
+                <dt>Fax:</dt>
+                <dd>@Html.DisplayFor(model => model.Person.FaxNumber)</dd>
 
-                <dt>
-                    E-mail:
-                </dt>
-                <dd>
-                    <a href="mailto:@Html.DisplayFor(model => model.Person.EmailAddress)">@Html.DisplayFor(model => model.Person.EmailAddress)</a>
-                </dd>
+                <dt>E-mail:</dt>
+                <dd><a href="mailto:@Html.DisplayFor(model => model.Person.EmailAddress)">@Html.DisplayFor(model => model.Person.EmailAddress)</a></dd>
 
-                <dt>
-                    Member since:
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Person.ValidFrom)
-                </dd>
+                <dt>Member since:</dt>
+                <dd>@Html.DisplayFor(model => model.Person.ValidFrom)</dd>
             </dl>
         </div>
 
@@ -65,42 +45,22 @@
     <div class="row">
         <div class="col-sm-6 details-box">
             <h2>Company Profile</h2>
-            <hr style="border-color: black;" />
+            <hr style="border-color: black;"/>
             <dl class="dl-horizontal">
-                <dt>
-                    Company name:
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Customer.CustomerName)
-                </dd>
+                <dt>Company name:</dt>
+                <dd>@Html.DisplayFor(model => model.Customer.CustomerName)</dd>
 
-                <dt>
-                    Phone:
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Customer.PhoneNumber)
-                </dd>
+                <dt>Phone:</dt>
+                <dd>@Html.DisplayFor(model => model.Customer.PhoneNumber)</dd>
 
-                <dt>
-                    Fax:
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Customer.FaxNumber)
-                </dd>
+                <dt>Fax:</dt>
+                <dd>@Html.DisplayFor(model => model.Customer.FaxNumber)</dd>
 
-                <dt>
-                    Website:
-                </dt>
-                <dd>
-                    <a href="@Html.DisplayFor(model => model.Customer.WebsiteURL)">@Html.DisplayFor(model => model.Customer.WebsiteURL)</a>
-                </dd>
+                <dt>Website:</dt>
+                <dd><a href="@Html.DisplayFor(model => model.Customer.WebsiteURL)">@Html.DisplayFor(model => model.Customer.WebsiteURL)</a></dd>
 
-                <dt>
-                    Member since:
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Customer.ValidFrom)
-                </dd>
+                <dt>Member since:</dt>
+                <dd>@Html.DisplayFor(model => model.Customer.ValidFrom)</dd>
             </dl>
         </div>
     </div>
@@ -110,29 +70,44 @@
     <div class="row">
         <div class="col-sm-6 details-box">
             <h2>Purchase History Summary</h2>
-            <hr style="border-color: black;" />
+            <hr style="border-color: black;"/>
             <dl class="dl-horizontal">
-                <dt>
-                    Orders:
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => model.Customer.Orders.Count)
-                </dd>
+                <dt>Orders:</dt>
+                <dd>@Html.DisplayFor(model => model.Customer.Orders.Count)</dd>
 
-                <dt>
-                    Gross sales:
-                </dt>
-                <dd>
-                    @String.Format("{0:C}", ViewBag.GrossSales)
-                </dd>
+                <dt>Gross sales:</dt>
+                <dd>@String.Format("{0:C}", ViewBag.GrossSales)</dd>
 
-                <dt>
-                    Gross profit:
-                </dt>
-                <dd>
-                    @String.Format("{0:C}", ViewBag.GrossProfit)
-                </dd>
+                <dt>Gross profit:</dt>
+                <dd>@String.Format("{0:C}", ViewBag.GrossProfit)</dd>
             </dl>
+        </div>
+    </div>
+
+    <br />
+
+    <div class="row">
+        <div class="col-sm-6 details-box">
+            <h2>Items Purchased</h2>
+            <hr style="border-color: black;"/>
+            <table>
+                <tr>
+                    <th>Stock item ID</th>
+                    <th>Description</th>
+                    <th>Line profit</th>
+                    <th>Salesperson</th>
+                </tr>
+
+            @foreach (var item in Model.InvoiceLine)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(model => item.StockItemID)</td>
+                    <td>@Html.DisplayFor(model => item.Description)</td>
+                    <td>@String.Format("{0:C}", item.LineProfit)</td>
+                    <td>@Html.DisplayFor(model => item.Invoice.Person4.FullName)</td>
+                </tr>
+            }
+            </table>
         </div>
     </div>
  }
