--- a/hw6/WWImporters/WWImporters/Content/Site.css
+++ b/hw6/WWImporters/WWImporters/Content/Site.css
@@ -1,5 +1,4 @@
 ﻿body {
-    padding-top: 50px;
     padding-bottom: 20px;
 }
 
@@ -33,6 +32,19 @@ tr:nth-child(odd) {
 
 .dl-horizontal dd {
     margin-left: 0;
+}
+
+.banner {
+    background-color: #859196;
+    width: 100%;
+    margin: 0;
+    padding: 1em;
+    display: inline-flex;
+}
+
+.banner h1 {
+    padding-left: 25px;
+    color: #fff;
 }
 
 .details-box {
