--- a/hw6/WWImporters/WWImporters/Views/Shared/_Layout.cshtml
+++ b/hw6/WWImporters/WWImporters/Views/Shared/_Layout.cshtml
@@ -8,22 +8,9 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("World Wide Importers", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <!--Empty for now.-->
-                </ul>
-            </div>
-        </div>
+    <div class="banner">
+        <img src="~/Content/airplane-around-earth.png" />
+        <h1>World Wide Importers</h1>
     </div>
     <div class="container body-content">
         @RenderBody()
