Added license attribution statement for icon used

--- a/hw6/WWImporters/WWImporters/Content/Site.css
+++ b/hw6/WWImporters/WWImporters/Content/Site.css
@@ -35,7 +35,7 @@ tr:nth-child(odd) {
 }
 
 .banner {
-    background-color: #859196;
+    background-color: #74777c;
     width: 100%;
     margin: 0;
     padding: 1em;
