--- a/hw7/GiphyApp/GiphyApp/Views/Home/Index.cshtml
+++ b/hw7/GiphyApp/GiphyApp/Views/Home/Index.cshtml
@@ -8,3 +8,17 @@
         </div>
     </div>
 </form>
+
+<br />
+<br />
+
+<div class="row">
+    <div class="live-display">
+        <!--Text and GIF stickers will appear as the user types-->
+    </div>
+</div>
+
+@section GiphyScript
+{
+    <script src="~/Scripts/giphy.js" type="text/javascript"></script>
+}
