--- a/hw7/GiphyApp/GiphyApp/Views/Shared/_Layout.cshtml
+++ b/hw7/GiphyApp/GiphyApp/Views/Shared/_Layout.cshtml
@@ -15,5 +15,6 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    @RenderSection("GiphySection", required: false)
 </body>
 </html>
