Added working giphy.js script

--- a/hw7/GiphyApp/GiphyApp/Views/Home/Index.cshtml
+++ b/hw7/GiphyApp/GiphyApp/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 <br />
 
 <div class="row">
-    <div class="live-display">
+    <div id="live-display">
         <!--Text and GIF stickers will appear as the user types-->
     </div>
 </div>
