--- a/hw7/GiphyApp/GiphyApp/Views/Shared/_Layout.cshtml
+++ b/hw7/GiphyApp/GiphyApp/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
         @RenderBody()
     </div>
 
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    @RenderSection("GiphySection", required: false)
+    @RenderSection("GiphyScript", required: false)
 </body>
 </html>
