Added comments to code where needed

--- a/hw7/GiphyApp/GiphyApp/Views/Home/Index.cshtml
+++ b/hw7/GiphyApp/GiphyApp/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
 <br />
 <br />
 
+@*Displays plain text and GIF images*@
 <div class="row">
     <div id="live-display">
         <!--Text and GIF stickers will appear as the user types-->
