--- a/hw8/AuctionHouse/AuctionHouse/Views/Items/Delete.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Items/Delete.cshtml
@@ -4,45 +4,56 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div class="container">
+    <h2>Delete Listing</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Item</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Seller1.Name)
-        </dt>
+    <h4>Are you sure you want to delete this listing?</h4>
+    <div>
+        <h6 style="color: red;">This action cannot be undone!</h6>
+        <hr />
+        <div class="row">
+        <div class="col-sm-6">
+            <dl class="row">
+                <dt class="col-sm-3">
+                    Seller:
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Seller1.Name)
-        </dd>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Seller1.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                <dt class="col-sm-3">
+                    Item name:
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.Description):
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Description)
+                </dd>
 
-    </dl>
+            </dl>
+        </div>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+        <div class="col-sm-6">
+            <img src="https://via.placeholder.com/175" class="d-block mx-auto" />
+        </div>
+        </div>
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" /> 
+            @Html.ActionLink("Cancel", "Index", "Items", null, new { @class = "btn btn-secondary" })
         </div>
-    }
+        }
+    </div>
 </div>
