--- a/hw8/AuctionHouse/AuctionHouse/Views/Items/Details.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Items/Details.cshtml
@@ -4,39 +4,49 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div class="container">
+    <h2>Details</h2>
 
-<div>
-    <h4>Item</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Seller1.Name)
-        </dt>
+        <h4>@Html.DisplayFor(model => model.Name)</h4>
+        <hr />
+        <div class="row">
+            <div class="col-sm-6">
+                <dl class="row">
+                    <dt class="col-sm-3">
+                        Seller:
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Seller1.Name)
-        </dd>
+                    <dd class="col-sm-9">
+                        @Html.DisplayFor(model => model.Seller1.Name)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                    <dt class="col-sm-3">
+                        Item name:
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                    <dd class="col-sm-9">
+                        @Html.DisplayFor(model => model.Name)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+                    <dt class="col-sm-3">
+                        @Html.DisplayNameFor(model => model.Description):
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+                    <dd class="col-sm-9">
+                        @Html.DisplayFor(model => model.Description)
+                    </dd>
 
-    </dl>
+                </dl>
+            </div>
+
+            <div class="col-sm-6">
+                <img src="https://via.placeholder.com/175" class="d-block mx-auto" />
+            </div>
+        </div>
+        <div class="row">
+
+        </div>
+        <p>
+            @Html.ActionLink("Return to listings", "Index", "Items", null, new { @class = "btn btn-secondary" })
+        </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
