Changed variable name in Item model for clarity

--- a/hw8/AuctionHouse/AuctionHouse/Views/Items/Delete.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Items/Delete.cshtml
@@ -19,7 +19,7 @@
                 </dt>
 
                 <dd class="col-sm-9">
-                    @Html.DisplayFor(model => model.Seller1.Name)
+                    @Html.DisplayFor(model => model.Seller.Name)
                 </dd>
 
                 <dt class="col-sm-3">
