--- a/hw8/AuctionHouse/AuctionHouse/Views/Items/Index.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Items/Index.cshtml
@@ -25,7 +25,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Seller1.Name)
+                    @Html.DisplayFor(modelItem => item.Seller.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
