Added additional pages for bidding

--- a/hw8/AuctionHouse/AuctionHouse/Views/Items/Index.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Items/Index.cshtml
@@ -10,10 +10,10 @@
     <table class="table table-responsive">
         <tr>
             <th>
-                Seller name
+                Seller
             </th>
             <th>
-                Item name
+                Item
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Description)
