--- a/hw8/AuctionHouse/AuctionHouse/Views/Home/Listings.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Home/Listings.cshtml
@@ -1,11 +1,12 @@
 ﻿@model IEnumerable<AuctionHouse.Models.Item>
 
 @{
-    ViewBag.Title = "Reginald's Ancient Antiquities Auction House";
+    ViewBag.Title = "Current listings";
 }
 
 <div class="container">
-    <h2 style="text-align: center;">Reginald's Ancient Antiquities Auction House</h2>
+    <h2 style="text-align: center;">Current auction items</h2>
+    <br />
 
     <table class="table table-responsive">
         <tr>
