--- a/hw8/AuctionHouse/AuctionHouse/Views/Home/Edit.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Home/Edit.cshtml
@@ -1,19 +1,21 @@
 ﻿@model AuctionHouse.Models.Item
 
 @{
-    ViewBag.Title = "Create a listing";
+    ViewBag.Title = "Edit listing";
 }
 
 <div class="container">
-    <h2>Create a listing</h2>
+    <h2>Edit Listing</h2>
 
-    @using (Html.BeginForm()) 
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
     
         <div class="form-horizontal">
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.ID)
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -31,17 +33,17 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Seller, "Seller", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.SellerID, "Seller", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("Seller", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Seller, "", new { @class = "text-danger" })
+                    @Html.DropDownList("SellerID", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.SellerID, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create listing" class="btn btn-primary" />
-                    @Html.ActionLink("Cancel", "Index", "Items", null, new { @class = "btn btn-secondary" })
+                    <input type="submit" value="Save changes" class="btn btn-primary" />
+                    @Html.ActionLink("Cancel", "Listings", "Home", null, new { @class = "btn btn-secondary" })
                 </div>
             </div>
         </div>
