--- a/hw8/AuctionHouse/AuctionHouse/Views/Shared/_Layout.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Shared/_Layout.cshtml
@@ -11,14 +11,17 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            @Html.ActionLink("Reginald's Auction House", "Index", "Items", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Reginald's Ancient Antiquities Auction House", "Index", "Home", new { area = "" }, new { @class = "navbar-brand special-title" })
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        @Html.ActionLink("Create a listing", "Create", "Items", null, new { @class = "nav-link" })
+                        @Html.ActionLink("Create a listing", "Create", "Home", null, new { @class = "nav-link" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("View current listings", "Listings", "Home", null, new { @class = "nav-link" })
                     </li>
                 </ul>
             </div>
