--- a/hw8/AuctionHouse/AuctionHouse/Views/Shared/_Layout.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Shared/_Layout.cshtml
@@ -37,5 +37,6 @@
 
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    @RenderSection("BidScript", required: false)
 </body>
 </html>
