Made some HTML/CSS improvements on views and added more seed data to up.sql

--- a/hw8/AuctionHouse/AuctionHouse/Views/Home/Index.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Home/Index.cshtml
@@ -41,16 +41,16 @@
 <table class="table">
     <tr>
         <th>
-            Bidder
+            @Html.DisplayNameFor(model => model.Buyer.Name)
         </th>
         <th>
-            Item
+            @Html.DisplayNameFor(model => model.Item.Name)
         </th>
         <th>
-            Bid amount
+            @Html.DisplayNameFor(model => model.Price)
         </th>
         <th>
-            Bid placed on
+            @Html.DisplayNameFor(model => model.TimeStamp)
         </th>
     </tr>
 
