--- a/hw8/AuctionHouse/AuctionHouse/Content/Site.css
+++ b/hw8/AuctionHouse/AuctionHouse/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-image: url("bgtheme.jpeg")
+    background-image: url("bgtheme.jpeg");
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -30,7 +30,6 @@ tr:nth-child(odd) {
 .special-title {
     font-family: 'Spectral SC', serif;
     border-bottom: 1px grey solid;
-    /*font-family: 'Vollkorn SC', serif;*/
 }
 
 /*Container styling for all pages*/
@@ -39,5 +38,4 @@ tr:nth-child(odd) {
     background-color: white;
     border-radius: 15px;
     padding: 20px;
-    height: 100%;
 }
