--- a/hw8/AuctionHouse/AuctionHouse/Views/Home/Details.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Home/Details.cshtml
@@ -14,7 +14,7 @@
                 <dl class="row">
                     <dt class="col-sm-3">
                         <input type="hidden" id="listing-id" value="@Model.ID">
-                        Seller:
+                        @Html.DisplayNameFor(model => model.Seller.Name):
                     </dt>
 
                     <dd class="col-sm-9">
@@ -22,7 +22,7 @@
                     </dd>
 
                     <dt class="col-sm-3">
-                        @Html.DisplayNameFor(model => model.Name)
+                        @Html.DisplayNameFor(model => model.Name):
                     </dt>
 
                     <dd class="col-sm-9">
@@ -48,11 +48,12 @@
         <br />
 
         <div class="row">
-            <div class="col-sm-10">
+            <div class="col-sm-6">
                 <h5>Bids on this item</h5>
             </div>
-            <div class="col-sm-2">
-                @Html.ActionLink("Place a bid", "PlaceBid", "Home", null, new { @class = "btn btn-secondary" })
+            <div class="col-sm-6">
+                @Html.ActionLink("Place a bid", "PlaceBid", "Home", null, new { @class = "btn btn-primary float-right" })
+                @Html.ActionLink("Return to listings", "Listings", "Home", null, new { @class = "btn btn-secondary float-right", style = "margin-right: 5px;"})
             </div>
         </div>
 
@@ -68,14 +69,10 @@
         </table>
 
         <h5 id="message" style="text-align:center"><!--Displays message if there are no bids on this item--></h5>
-
         <br />
-
-        <p>
-            @Html.ActionLink("Return to listings", "Listings", "Home", null, new { @class = "btn btn-secondary" })
-        </p>
 </div>
 
+@*Executes JS file on this page*@
 @section BidScript
 {
     <script type="text/javascript" src="~/Scripts/bids.js"></script>
