--- a/hw8/AuctionHouse/AuctionHouse/Views/Home/Index.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Home/Index.cshtml
@@ -37,6 +37,7 @@
 <br />
 <br />
 
+@*Displays table containing ten most recent bids*@
 <h5>Top ten most recent bids</h5>
 <table class="table">
     <tr>
