Added information to footer and removed sensitive data from connection string.

--- a/hw8/AuctionHouse/AuctionHouse/Views/Shared/_Layout.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Shared/_Layout.cshtml
@@ -31,7 +31,8 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Reginald's Ancient Antiquities Auction House</p>
+            <p>&copy; @DateTime.Now.Year - Manuel Larios</p>
+            <p>This website was created for <a href="http://www.wou.edu/~morses/classes/cs46x/assignments/HW9_1819.html">Homework #9</a> in CS460 at <a href="https://www.wou.edu/">Western Oregon University</a>.</p>
         </footer>
     </div>
 
